--- a/Surface-Ui/src/app/components/accounts/login/login.component.html
+++ b/Surface-Ui/src/app/components/accounts/login/login.component.html
@@ -1,7 +1,7 @@
 <p>login works!</p>
 <button (click)="loginWithGoogle">login with google</button>
 <P>{{ googleClientId }}</P>
-<a routerLink="register">register</a>
+<a routerLink="register" class="border">register</a>
 
 <div id="buttonDiv">
 
