--- a/Surface-Ui/src/app/layout/account/account.component.html
+++ b/Surface-Ui/src/app/layout/account/account.component.html
@@ -1,4 +1,6 @@
-<p>account works!</p>
-<router-outlet>
-    
-</router-outlet>
+<div class="wrapper border">
+
+    <router-outlet>
+        
+    </router-outlet>
+</div>
