created : api in dotnet 7

--- a/Surface-Ui/src/app/layout/account/account.component.html
+++ b/Surface-Ui/src/app/layout/account/account.component.html
@@ -1,4 +1,7 @@
 <p>account works!</p>
-<router-outlet>
-    
-</router-outlet>
+<div class="p-4">
+
+    <router-outlet>
+        
+    </router-outlet>
+</div>
