--- a/Surface-Ui/src/app/components/accounts/login/login.component.html
+++ b/Surface-Ui/src/app/components/accounts/login/login.component.html
@@ -1,8 +1,1 @@
-<p>login works!</p>
-<button (click)="loginWithGoogle">login with google</button>
-<P>{{ googleClientId }}</P>
-<a routerLink="register">register</a>
-
-<div id="buttonDiv">
-
-</div> 
+<app-text-field></app-text-field>
