--- a/Surface-Project/Surface-UI/src/styles.css
+++ b/Surface-Project/Surface-UI/src/styles.css
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root{
+    --account-bg-color: #596e7f;
+    --btn-red:#fe4741
+}
