google login component created

--- a/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.html
+++ b/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.html
@@ -1,7 +1,16 @@
 <div class="position-relative account-layout row">
+  <div class="position-relative row">
+    <div
+      class="position-absolute start-50 translate-middle col-6 text-center mt-5 text-light"
+    >
+      <h2>SURFACE</h2>
+    </div>
+  </div>
   <div
     class="position-absolute top-50 start-50 translate-middle account-forms p-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-4"
   >
     <router-outlet></router-outlet>
   </div>
+  
 </div>
+
