--- a/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.css
+++ b/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.css
@@ -5,8 +5,7 @@
 }
 
 .account-forms{
-    background-color:#fafbfd;
-    opacity: 0.9;
+    background-color:#ffffff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px #dfdddd;
 }
