--- a/Surface-Project/Surface-UI/src/app/modules/account/components/login/login.component.html
+++ b/Surface-Project/Surface-UI/src/app/modules/account/components/login/login.component.html
@@ -20,16 +20,21 @@
     <!-- <mat-checkbox>Remember me</mat-checkbox> -->
   </div>
   <div class="row px-3">
-    <div class="btn" (click)="login()">Login</div>
+    <div class="btn text-light" (click)="login()">Login</div>
   </div>
-  <div class="row px-3">
+  <div class="row px-3 mt-2">
     <div class="google-login col text-center">
       <app-google></app-google>
     </div>
-    <div class="microsoft-login col text-center">M</div>
-    <div class="facebook-login col text-center"><app-facebook></app-facebook></div>
+    <div class="microsoft-login col text-center">
+      <app-microsoft></app-microsoft>
+    </div>
+    <div class="facebook-login col text-center">
+      <app-facebook></app-facebook>
+    </div>
   </div>
   <div class="row px-3">
+    <a [routerLink]="['/account/forgot-password']">forgot password?</a>
     <a [routerLink]="['/account/register']">register</a>
   </div>
 </div>
