--- a/Surface-Project/Surface-UI/src/styles.css
+++ b/Surface-Project/Surface-UI/src/styles.css
@@ -5,5 +5,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 :root{
     --account-bg-color: #596e7f;
-    --btn-red:#fe4741
+    --btn-red:#fe4741;
+    --btn-green:#277863;
 }
