account actions are completed

--- a/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.html
+++ b/Surface-Project/Surface-UI/src/app/modules/account/components/layout/account-layout/account-layout.component.html
@@ -1,19 +1,14 @@
-<div class="position-relative account-layout row">
-  <div class="position-relative row">
+<div class="account-layout row">
+  <div class=" row">
     <div
-      class="position-absolute start-50 translate-middle col-6 text-center mt-5 text-light"
+      class=" mx-autocol-6 text-center mt-5 text-light"
     >
-      <h2>S U R F A C E</h2>
+      <h2 class="mx-auto">S U R F A C E</h2>
     </div>
-    <div class="position-absolute start-100 translate-middle text-center mt-5 text-light me-4 pe-4">
-      <div class="language-options">
-        <button (click)="switchToEn()">EN</button>
-       <button (click)="switchToFr()">FR</button>
-      </div>
-    </div>
+    
   </div>
   <div
-    class="position-absolute top-50 start-50 translate-middle account-forms p-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-4"
+    class="account-forms p-3 col-11 col-sm-8 col-md-6 col-lg-5 col-xl-4 mx-auto"
   >
     <router-outlet></router-outlet>
   </div>
