sidebar code importad

--- a/Surface-Project/SurfaceUi/src/app/components/app-layout/app-layout.component.html
+++ b/Surface-Project/SurfaceUi/src/app/components/app-layout/app-layout.component.html
@@ -1,1 +1,8 @@
+<div class="layout-wrapper" #body>
 <app-sidebar></app-sidebar>
+<section class="home">
+    <div class="text">Dashboard Sidebar</div>
+    <router-outlet></router-outlet>
+  </section>
+
+</div>
