--- a/Surface-Project/SurfaceUi/src/app/components/app-layout/sidebar/sidebar.component.html
+++ b/Surface-Project/SurfaceUi/src/app/components/app-layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav class="sidebar close"  #sidebar>
+
     <header>
   <div class="image-text">
     <span class="image">
@@ -6,26 +6,28 @@
     </span>
 
     <div class="text logo-text">
-      <span class="name">Codinglab</span>
+      <span class="name">Surface</span>
       <span class="profession">Web developer</span>
     </div>
   </div>
 
-  <i class='bx bx-chevron-right toggle' #toggle></i>
+  <div class=' toggle' #toggle>
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"/></svg>
+    </div>
 </header>
 
 <div class="menu-bar">
   <div class="menu">
 
     <li class="search-box" #searchBtn>
-      <i class='bx bx-search icon'></i>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" height="20px" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
       <input type="text" placeholder="Search Ganes...">
     </li>
 
     <ul class="menu-links">
       <li class="nav-link">
         <a href="#">
-          <i class='bx bx-home-alt icon'></i>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" height="1em" viewBox="0 0 512 512"><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
           <span class="text nav-text">Dashboard</span>
         </a>
       </li>
@@ -90,5 +92,3 @@
 
   </div>
 </div>
-
-</nav>
