--- a/Surface-Project/SurfaceUi/src/app/components/app-layout/app-layout.component.html
+++ b/Surface-Project/SurfaceUi/src/app/components/app-layout/app-layout.component.html
@@ -1,14 +1,12 @@
-<div class="layout-wrapper " #body>
+<div class="layout-wrapper " >
   <nav class="sidebar close"  #sidebar>
 
     <app-sidebar></app-sidebar>
   </nav>
     <section class="home">
     <div class="header ">
-
-      <app-header></app-header>
+      <router-outlet></router-outlet>
     </div>
-    <!-- <router-outlet></router-outlet> -->
   </section>
 
 </div>
