--- a/Surface-Project/SurfaceUi/src/styles.css
+++ b/Surface-Project/SurfaceUi/src/styles.css
@@ -109,9 +109,13 @@ body.dark {
   display: flex;
   align-items: center;
 }
+.sidebar.close header .image-text {
+  display: none;
+}
 .sidebar header .logo-text {
   display: flex;
   flex-direction: column;
+ justify-content: center;
 }
 header .image-text .name {
   margin-top: 2px;
@@ -138,7 +142,7 @@ header .image-text .profession {
 
 .sidebar header .toggle {
   position: absolute;
-  top: 50%;
+  top: 40px;
   right: -25px;
   transform: translateY(-50%) rotate(180deg);
   height: 25px;
@@ -208,6 +212,10 @@ body.dark .sidebar header .toggle {
 body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text {
   color: var(--text-color);
+  
+}
+body.dark .icon{
+  fill: rgb(195, 195, 195);
 }
 
 .sidebar .menu-bar {
@@ -300,12 +308,13 @@ body.dark .switch::before {
 }
 
 .sidebar.close ~ .home {
-  left: 78px;
+  left: 95px;
   height: 100vh;
-  width: calc(100% - 78px);
+  width: calc(100% - 100px);
 }
 body.dark .home .text {
   color: var(--text-color);
 }
+
 
 
