--- a/Surface-Project/SurfaceUi/src/app/components/app-layout/header/dashboard-header/dashboard-header.component.html
+++ b/Surface-Project/SurfaceUi/src/app/components/app-layout/header/dashboard-header/dashboard-header.component.html
@@ -2,7 +2,7 @@
 
     <button [matMenuTriggerFor]="afterMenu" mat-raised-button color="primary"> <mat-icon>add</mat-icon> Create</button>
     <mat-menu #afterMenu="matMenu" xPosition="after">
-        <a mat-menu-item routerLink="/project/create" routerLinkActive="router-link-active" >
+        <a mat-menu-item routerLink="/create/project" routerLinkActive="router-link-active" >
             <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" class="me-1"
                 viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
                 <path
