--- a/Surface-Project/SurfaceUi/src/app/components/account/register/register.component.html
+++ b/Surface-Project/SurfaceUi/src/app/components/account/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="form-title row text-center mb-4">
     <h3>Registration</h3>
-  </div>
-  <div class="registrationForm" [formGroup]="registrationForm">
+</div>
+<div class="registrationForm" [formGroup]="registrationForm">
     <div class="name row">
         <div class="col-12 col-6">
 
@@ -11,21 +11,21 @@
             </mat-form-field>
         </div>
         <div class="col-12 col-6">
-            <mat-form-field class="first-name form-field w-100  ">
+            <mat-form-field class="last-name form-field w-100  ">
                 <mat-label>Last name</mat-label>
                 <input matInput placeholder="Last name" formControlName="lastName">
             </mat-form-field>
         </div>
-     
-     
+
+
     </div>
-    <div class="email row">
+    <div class="email row ">
         <mat-form-field class="email form-field w-100  ">
             <mat-label>Email </mat-label>
             <input matInput type="email" placeholder="Email" formControlName="email">
         </mat-form-field>
     </div>
-    <div class="password row">
+    <div class="password row mb-2">
         <div class="col-12 col-md-6">
 
             <mat-form-field class="password form-field w-100  ">
@@ -40,14 +40,14 @@
                 <input matInput type="password" placeholder="Confirm assword" formControlName="confirmPassword">
             </mat-form-field>
         </div>
-           
-      
+
+
     </div>
     <div class="row px-3">
-      <div class="btn text-dark" (click)="register()">Register</div>
+        <div class="btn text-dark" (click)="register()">Register</div>
     </div>
     <div class="social-logins">
-      <!-- <div class="row px-3 mt-2">
+        <!-- <div class="row px-3 mt-2">
         <div class="google-login col text-center">
           <app-google></app-google>
         </div>
@@ -60,7 +60,6 @@
       </div> -->
     </div>
     <div class="login">
-      <a [routerLink]="['/account/login']">login</a>
+        <a [routerLink]="['/account/login']">login</a>
     </div>
-  </div>
-  
+</div>
